--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev:cms": "pnpm --filter cms develop",
     "dev:web": "pnpm --filter web dev",
+    "dev:crawler": "pnpm --filter gig-crawler dev",
     "dev": "pnpm --parallel --filter cms --filter web dev",
     "build:cms": "pnpm --filter cms build",
     "build:web": "pnpm --filter web build",
-    "build": "pnpm --parallel --filter cms --filter web build",
+    "build:crawler": "pnpm --filter gig-crawler build",
+    "build": "pnpm --parallel --filter cms --filter web --filter gig-crawler build",
     "start:cms": "pnpm --filter cms start",
     "start:web": "pnpm --filter web preview",
+    "start:crawler": "pnpm --filter gig-crawler start",
     "clean:cms": "rm -rf apps/cms/.cache apps/cms/.strapi apps/cms/dist apps/cms/build apps/cms/node_modules/.cache apps/cms/node_modules/.vite apps/cms/node_modules/.strapi && pnpm --filter cms build",
     "format": "prettier --write \"**/*.{js,mjs,ts,tsx,astro,json,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,mjs,ts,tsx,astro,json,css,md}\"",
