feat: add API key auth for remote sync endpoint
When SYNC_API_KEY env var is set, require Authorization: Bearer
header on /api/sync. When unset (local dev), allow unauthenticated
access.

--- a/apps/gig-crawler/.env.example
+++ b/apps/gig-crawler/.env.example
@@ -17,5 +17,8 @@ NODE_ENV=development
 CRON_SCHEDULE=0 2 * * *
 TZ=Europe/Athens
 
+# Auth (optional - when set, /api/sync requires Authorization: Bearer <key>)
+# SYNC_API_KEY=your_sync_api_key_here
+
 # Logging
 LOG_LEVEL=info
