--- a/apps/gig-crawler/Dockerfile
+++ b/apps/gig-crawler/Dockerfile
@@ -4,11 +4,11 @@ FROM mcr.microsoft.com/playwright:v1.52.0-noble AS builder
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY package.json ./
 COPY tsconfig.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
 # Copy source
 COPY src ./src
@@ -22,10 +22,10 @@ FROM mcr.microsoft.com/playwright:v1.52.0-noble
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY package.json ./
 
 # Install production dependencies only
-RUN npm ci --omit=dev
+RUN npm install --omit=dev
 
 # Copy built files from builder
 COPY --from=builder /app/dist ./dist
